<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="18dp"
            android:text="@string/temperatura_titulo"
            android:gravity="center"
            android:layout_span="6"></TextView>
    </TableRow>

    <TableRow android:background="#6ecec0"
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/TextView04"
            android:text=""></TextView>
        <TextView
            android:id="@+id/TextView05"
            android:text="@string/grados_celsiu"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16dp"></TextView>
        <TextView
            android:id="@+id/TextView03"
            android:text="@string/fecha_registro"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="16dp"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow2"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/ultima_entrada"
            android:id="@+id/textView2"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txtultimaentradatemperatura"
            android:text=""
            android:gravity="center_horizontal"></TextView>
        <TextView
            android:text=""
            android:id="@+id/txtfechaultimaentrada"
            android:gravity="center_horizontal"></TextView>

    </TableRow>

    <TableRow
    android:layout_height="wrap_content"
    android:id="@+id/tableRow3"
    android:layout_width="match_parent">
    <TextView
        android:id="@+id/textView1"
        android:text="@string/maximo"
        android:textStyle="bold"></TextView>
    <TextView
        android:id="@+id/txttemperaturamaxima"
        android:text=""
        android:gravity="center_horizontal"></TextView>
    <TextView
        android:text=""
        android:id="@+id/fechatemperaturamaxima"
        android:gravity="center_horizontal"></TextView>

</TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow5"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/minimo"
            android:id="@+id/textView3"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txttemperaturaminima"
            android:text=""
            android:gravity="center_horizontal"></TextView>
        <TextView
            android:text=""
            android:id="@+id/fechatemperaturaminima"
            android:gravity="center_horizontal"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"/>
        <TextView
            android:text="@string/media_Max_Min"
            android:id="@+id/textView4"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txttemperaturamedia"
            android:text=""
            android:gravity="center_horizontal"></TextView>

    <TableRow android:background="#FF909090"
        android:id="@+id/tableRow10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow12"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="18dp"
            android:text="@string/humedad_titulo"
            android:gravity="center"
            android:layout_span="6"></TextView>
    </TableRow>

    <TableRow android:background="#6ecec0"
        android:id="@+id/tableRow13"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/TextView16"
            android:text=""></TextView>
        <TextView
            android:id="@+id/TextView17"
            android:text="@string/humedad_porcentual"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16dp"></TextView>
        <TextView
            android:id="@+id/TextView18"
            android:text="@string/fecha_registro"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="16dp"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow18"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/ultima_entrada"
            android:id="@+id/textView19"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txtultimaentradahumedad"
            android:text=""
            android:gravity="center_horizontal"></TextView>
        <TextView
            android:text=""
            android:id="@+id/txtfechaultimaentrada2"
            android:gravity="center_horizontal"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow7"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/textView21"
            android:text="@string/minimo"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txthumedadamaxima"
            android:text=""
            android:gravity="center_horizontal"></TextView>
        <TextView
            android:text=""
            android:id="@+id/fechahumedadmaxima"
            android:gravity="center_horizontal"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow8"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/maximo"
            android:id="@+id/textView22"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/txthumedadminima"
            android:text=""
            android:gravity="center_horizontal"></TextView>
        <TextView
            android:text=""
            android:id="@+id/fechahumedadminima"
            android:gravity="center_horizontal"></TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"/>
    <TextView
        android:text="@string/media_Max_Min"
        android:id="@+id/textView24"
        android:textStyle="bold"
        android:layout_width="wrap_content">
        </TextView>
    <TextView
        android:id="@+id/txthumedadmedia"
        android:text=""
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"></TextView>

    <TableRow android:background="#FF909090"
        android:id="@+id/tableRow11"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableRow>
    <GridLayout
        android:layout_width="395dp"
        android:layout_height="100dp"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginLeft="20dp">

        <ImageButton
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:id="@+id/accesodata"
            android:src="@drawable/alarma"
            android:layout_column="0"
            android:layout_row="0"
            android:singleLine="true"
            android:nestedScrollingEnabled="false"
            android:layout_marginLeft="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/alarma"
            android:id="@+id/textView5"
            android:textIsSelectable="false"
            android:textSize="12dp"
            android:textColor="#484949"
            android:textAlignment="center"
            android:layout_marginLeft="70dp" />

        <ImageButton
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:src="@drawable/prediccion"
            android:id="@+id/accesotabla"
            android:layout_column="1"
            android:layout_row="0"
            android:singleLine="true"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/prediccion"
            android:id="@+id/textView6"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#484949"
            android:textSize="12dp"
            android:textIsSelectable="true"
            android:layout_marginLeft="25dp" />


    </GridLayout>



</TableLayout>

